--- a/styles/architect.css
+++ b/styles/architect.css
@@ -7,12 +7,11 @@
     border-radius: 8px;
     background: #FF900E;
     border: 0;
-    width: 180px;
-    height: 64px;
     padding: 20px 25px;
     color: #FFF;
-    font-size: 1rem;
+    font-size: 1.25rem;
     font-weight: 600;
+    cursor: pointer;
 }
 
 /* header section styles */
@@ -68,4 +67,36 @@ nav li a {
     color: #727272;
     font-size: 1rem;
     font-weight: 400;
+}
+
+.banner img{
+    margin-top: 20px;
+    width: 100%;
+}
+
+
+/* responsive media queries */
+
+/* for mobile or small devices */
+
+@media screen and (max-width: 576px) {
+    header {
+        padding: 20px;
+    }
+
+    nav{
+        flex-direction: column;
+    }
+}
+
+/* for tablet or medium devices */
+
+@media screen and (min-width: 576px) and (max-width: 960px) {
+    header{
+        padding: 50px;
+    }
+
+    nav{
+        flex-direction: column;
+    }
 }
