--- a/styles/architect.css
+++ b/styles/architect.css
@@ -69,7 +69,7 @@ nav li a {
     font-weight: 400;
 }
 
-.banner img{
+.banner img {
     margin-top: 20px;
     width: 100%;
 }
@@ -84,7 +84,7 @@ nav li a {
         padding: 20px;
     }
 
-    nav{
+    nav {
         flex-direction: column;
     }
 }
@@ -92,11 +92,52 @@ nav li a {
 /* for tablet or medium devices */
 
 @media screen and (min-width: 576px) and (max-width: 960px) {
-    header{
+    header {
         padding: 50px;
     }
 
-    nav{
+    nav {
         flex-direction: column;
     }
+}
+
+.teams-container{
+    display: flex;
+    align-items: center;
+}
+
+.teams-images{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+}
+
+.teams-content{
+    padding-right: 70px;
+    padding-left: 70px;
+}
+
+.teams-content-title{
+    font-size: 2.8rem;
+}
+
+.teams-content-title .extra-color-grey{
+    color: #727272;
+    font-weight: 500;
+}
+
+.teams-content-title .extra-color-black{
+    color: #131313;
+    font-weight: 700;
+}
+
+.teams-content-title .extra-color-orange{
+    color: #FF900E;
+    font-weight: 700;
+}
+
+.teams-content-description{
+    color: #727272;
+    font-size: 1rem;
+    font-weight: 400;
 }
