--- a/styles/architect.css
+++ b/styles/architect.css
@@ -14,6 +14,13 @@
     cursor: pointer;
 }
 
+.text-color-grey {
+    color: #727272;
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+
 /* header section styles */
 
 header {
@@ -63,15 +70,51 @@ nav li a {
     font-weight: 700;
 }
 
-.banner-description {
-    color: #727272;
-    font-size: 1rem;
-    font-weight: 400;
-}
-
 .banner img {
     margin-top: 20px;
     width: 100%;
+}
+
+/* main section styles */
+main {
+    max-width: 1440px;
+    margin: 70px auto;
+}
+
+/* team section styles */
+.teams-container {
+    display: flex;
+    align-items: center;
+}
+
+.teams-images {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+}
+
+.teams-content {
+    padding-right: 70px;
+    padding-left: 70px;
+}
+
+.teams-content-title {
+    font-size: 2.8rem;
+}
+
+.teams-content-title .extra-color-grey {
+    color: #727272;
+    font-weight: 500;
+}
+
+.teams-content-title .extra-color-black {
+    color: #131313;
+    font-weight: 700;
+}
+
+.teams-content-title .extra-color-orange {
+    color: #FF900E;
+    font-weight: 700;
 }
 
 
@@ -84,9 +127,19 @@ nav li a {
         padding: 20px;
     }
 
-    nav {
+    nav,
+    .teams-container {
         flex-direction: column;
     }
+
+    .teams-images {
+        grid-template-columns: 1fr;
+    }
+
+    .teams-content {
+        padding-right: 20px;
+        padding-left: 20px;
+}
 }
 
 /* for tablet or medium devices */
@@ -96,48 +149,9 @@ nav li a {
         padding: 50px;
     }
 
-    nav {
+    nav,
+    .teams-container {
         flex-direction: column;
     }
-}
 
-.teams-container{
-    display: flex;
-    align-items: center;
-}
-
-.teams-images{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1.5rem;
-}
-
-.teams-content{
-    padding-right: 70px;
-    padding-left: 70px;
-}
-
-.teams-content-title{
-    font-size: 2.8rem;
-}
-
-.teams-content-title .extra-color-grey{
-    color: #727272;
-    font-weight: 500;
-}
-
-.teams-content-title .extra-color-black{
-    color: #131313;
-    font-weight: 700;
-}
-
-.teams-content-title .extra-color-orange{
-    color: #FF900E;
-    font-weight: 700;
-}
-
-.teams-content-description{
-    color: #727272;
-    font-size: 1rem;
-    font-weight: 400;
 }
