--- a/styles/architect.css
+++ b/styles/architect.css
@@ -20,6 +20,12 @@
     font-weight: 400;
 }
 
+.section-title {
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #131313;
+}
+
 
 /* header section styles */
 
@@ -32,12 +38,6 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.nav-title {
-    font-size: 2.8rem;
-    font-weight: 700;
-    color: #131313;
 }
 
 nav>ul {
@@ -117,6 +117,34 @@ main {
     font-weight: 700;
 }
 
+/* facts section */
+
+.fact-card-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.fact-card-container .card {
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 30px;
+}
+
+.fact-card-container .card-stats {
+    color: #424242;
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.fact-card-container .card-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 5px;
+}
+
 
 /* responsive media queries */
 
@@ -139,7 +167,7 @@ main {
     .teams-content {
         padding-right: 20px;
         padding-left: 20px;
-}
+    }
 }
 
 /* for tablet or medium devices */
