--- a/styles/architect.css
+++ b/styles/architect.css
@@ -139,10 +139,29 @@ main {
     margin-bottom: 10px;
 }
 
-.fact-card-container .card-title{
+.fact-card-container .card-title {
     font-weight: 600;
     font-size: 1.25rem;
     margin-top: 5px;
+}
+
+/* sponsor section styles */
+
+.sponsors{
+    text-align: center;
+}
+
+.sponsor-images{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 40px;
+}
+
+.sponsor-images img{
+    width: 165px;
+    height: 50px;
 }
 
 
@@ -156,7 +175,9 @@ main {
     }
 
     nav,
-    .teams-container {
+    .teams-container,
+    .fact-card-container,
+    .sponsor-images {
         flex-direction: column;
     }
 
@@ -164,10 +185,17 @@ main {
         grid-template-columns: 1fr;
     }
 
-    .teams-content {
+    .teams-content, 
+    .fact-card-container {
         padding-right: 20px;
         padding-left: 20px;
     }
+
+    .fact-card-container{
+        gap: 20px;
+    }
+
+
 }
 
 /* for tablet or medium devices */
@@ -178,7 +206,8 @@ main {
     }
 
     nav,
-    .teams-container {
+    .teams-container,
+    .sponsor-images {
         flex-direction: column;
     }
 
