--- a/styles/architect.css
+++ b/styles/architect.css
@@ -117,7 +117,56 @@ main {
     font-weight: 700;
 }
 
-/* facts section */
+/* features section styles */
+
+.features {
+    margin-top: 130px;
+    display: flex;
+    gap: 130px;
+}
+
+.feature-contents .card {
+    padding: 30px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+
+.features .section-title {
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+
+.feature-images img {
+    height: 91%;
+    margin-left: 90px;
+}
+
+.ten-years-badge {
+    width: 340px;
+    border-radius: 8px;
+    background: #FF900E;
+    color: #FFF;
+    padding: 40px;
+    text-align: center;
+    position: relative;
+    bottom: 100px;
+}
+
+.ten-years-badge h2 {
+    font-size: 4rem;
+    font-weight: 700;
+    margin: 0;
+}
+
+.ten-years-badge p {
+    font-size: 1.5rem;
+    font-weight: 500;
+
+}
+
+/* facts section styles */
 
 .fact-card-container {
     display: flex;
@@ -147,11 +196,11 @@ main {
 
 /* sponsor section styles */
 
-.sponsors{
+.sponsors {
     text-align: center;
 }
 
-.sponsor-images{
+.sponsor-images {
     margin-top: 50px;
     display: flex;
     justify-content: space-evenly;
@@ -159,9 +208,26 @@ main {
     gap: 40px;
 }
 
-.sponsor-images img{
+.sponsor-images img {
     width: 165px;
     height: 50px;
+}
+
+/* footer section styles */
+
+footer {
+    max-width: 1440px;
+    border-radius: 8px;
+    background: #FFF4E7;
+    margin: 70px 240px;
+    text-align: center;
+    padding: 35px 380px;
+}
+
+footer h4 {
+    color: #424242;
+    font-size: 1.25rem;
+    font-weight: 400;
 }
 
 
@@ -177,7 +243,8 @@ main {
     nav,
     .teams-container,
     .fact-card-container,
-    .sponsor-images {
+    .sponsor-images,
+    .features {
         flex-direction: column;
     }
 
@@ -185,16 +252,25 @@ main {
         grid-template-columns: 1fr;
     }
 
-    .teams-content, 
+    .teams-content,
     .fact-card-container {
         padding-right: 20px;
         padding-left: 20px;
     }
 
-    .fact-card-container{
+    .fact-card-container {
         gap: 20px;
     }
 
+    .feature-images img {
+        width: 90%;
+        margin-left: 0;
+    }
+
+    .ten-years-badge {
+        position: static;
+        max-width: 300px;
+    }
 
 }
 
@@ -207,7 +283,8 @@ main {
 
     nav,
     .teams-container,
-    .sponsor-images {
+    .sponsor-images,
+    .features {
         flex-direction: column;
     }
 
