--- a/styles/architect.css
+++ b/styles/architect.css
@@ -272,6 +272,12 @@ footer h4 {
         max-width: 300px;
     }
 
+    footer{
+        margin: 5px;
+        max-width: 100%;
+        padding: 5px;
+    }
+
 }
 
 /* for tablet or medium devices */
@@ -286,6 +292,12 @@ footer h4 {
     .sponsor-images,
     .features {
         flex-direction: column;
+    }
+
+    footer{
+        margin: 5px;
+        max-width: 100%;
+        padding: 10px;
     }
 
 }
